tests/baselines/reference/propertyAccessNumericLiterals.errors.txt
tests/cases/conformance/expressions/propertyAccess/propertyAccessNumericLiterals.ts(6,1): error TS1121: Octal literals are not allowed. Use the syntax '0o00'.


==== tests/cases/conformance/expressions/propertyAccess/propertyAccessNumericLiterals.ts (1 errors) ====
    0xffffffff.toString();
    0o01234.toString();
    0b01101101.toString();
    1234..toString();
    1e0.toString();
    000.toString();
    ~~~
!!! error TS1121: Octal literals are not allowed. Use the syntax '0o00'.